[gd_scene load_steps=6 format=2]

[ext_resource path="res://Models/Hook/HookMesh.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://Models/Hook/Hook.gd" type="Script" id=2]
[ext_resource path="res://Models/Hook/chain.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.380392, 0.266667, 0.266667, 1 )

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 0.5175, -0.2717, 0.1791, 0.0525, -0.1791, 0.1791, 0.3128, -0.4544, 0.1791, 0.4107, -0.1791, 0.1791, 0.0525, -0.1791, 0.1791, 0.5175, -0.2717, 0.1791, -0.1025, 0.1791, -0.1791, 0.4107, -0.1791, -0.1791, 0.0525, -0.1791, -0.1791, -0.1025, 0.1791, -0.1791, 0.1902, 0.1791, -0.1791, 0.4107, -0.1791, -0.1791, 0.1902, 0.1791, -0.1791, 0.4107, -0.1791, 0.1791, 0.4107, -0.1791, -0.1791, 0.1902, 0.1791, -0.1791, 0.1902, 0.1791, 0.1791, 0.4107, -0.1791, 0.1791, 0.3502, 0.9754, 0.1791, -0.1421, 0.5772, 0.1791, 0.1689, 0.5772, 0.1791, 0.3502, 0.9754, 0.1791, -0.0079, 0.9754, 0.1791, -0.1421, 0.5772, 0.1791, -0.1025, 0.1791, 0.1791, 0.0525, -0.1791, -0.1791, 0.0525, -0.1791, 0.1791, -0.1025, 0.1791, 0.1791, -0.1025, 0.1791, -0.1791, 0.0525, -0.1791, -0.1791, 0.1902, 0.1791, 0.1791, 0.0525, -0.1791, 0.1791, 0.4107, -0.1791, 0.1791, 0.1902, 0.1791, 0.1791, -0.1025, 0.1791, 0.1791, 0.0525, -0.1791, 0.1791, 0.1689, 0.5772, 0.1791, -0.1025, 0.1791, 0.1791, 0.1902, 0.1791, 0.1791, 0.1689, 0.5772, 0.1791, -0.1421, 0.5772, 0.1791, -0.1025, 0.1791, 0.1791, -0.0079, 0.9754, -0.1791, 0.1689, 0.5772, -0.1791, -0.1421, 0.5772, -0.1791, -0.0079, 0.9754, -0.1791, 0.3502, 0.9754, -0.1791, 0.1689, 0.5772, -0.1791, 0.3502, 0.9754, -0.1791, 0.1689, 0.5772, 0.1791, 0.1689, 0.5772, -0.1791, 0.3502, 0.9754, -0.1791, 0.3502, 0.9754, 0.1791, 0.1689, 0.5772, 0.1791, -0.0079, 0.9754, 0.1791, -0.1421, 0.5772, -0.1791, -0.1421, 0.5772, 0.1791, -0.0079, 0.9754, 0.1791, -0.0079, 0.9754, -0.1791, -0.1421, 0.5772, -0.1791, 0.3023, 1.2257, 0.1791, -0.0079, 0.9754, -0.1791, -0.0079, 0.9754, 0.1791, 0.3023, 1.2257, 0.1791, 0.3023, 1.2257, -0.1791, -0.0079, 0.9754, -0.1791, -0.1421, 0.5772, -0.1791, 0.1902, 0.1791, -0.1791, -0.1025, 0.1791, -0.1791, -0.1421, 0.5772, -0.1791, 0.1689, 0.5772, -0.1791, 0.1902, 0.1791, -0.1791, 0.1689, 0.5772, -0.1791, 0.1902, 0.1791, 0.1791, 0.1902, 0.1791, -0.1791, 0.1689, 0.5772, -0.1791, 0.1689, 0.5772, 0.1791, 0.1902, 0.1791, 0.1791, -0.1421, 0.5772, 0.1791, -0.1025, 0.1791, -0.1791, -0.1025, 0.1791, 0.1791, -0.1421, 0.5772, 0.1791, -0.1421, 0.5772, -0.1791, -0.1025, 0.1791, -0.1791, 0.3023, 1.2257, -0.1791, 0.3502, 0.9754, -0.1791, -0.0079, 0.9754, -0.1791, 0.3023, 1.2257, -0.1791, 0.6605, 1.1789, -0.1791, 0.3502, 0.9754, -0.1791, 1.0654, 1.1722, -0.1791, 1.3195, 1.0937, -0.1791, 1.2385, 1.0125, -0.1791, 1.0654, 1.1722, -0.1791, 1.2047, 1.2654, -0.1791, 1.3195, 1.0937, -0.1791, 0.8845, 1.229, -0.1791, 1.2047, 1.2654, -0.1791, 1.0654, 1.1722, -0.1791, 0.3023, 1.2257, -0.1791, 0.8845, 1.229, -0.1791, 0.6605, 1.1789, -0.1791, 0.5781, 1.3375, -0.1791, 0.8845, 1.229, -0.1791, 0.3023, 1.2257, -0.1791, 0.5781, 1.3375, -0.1791, 1.2047, 1.2654, -0.1791, 0.8845, 1.229, -0.1791, 0.5781, 1.3375, -0.1791, 0.9194, 1.3626, -0.1791, 1.2047, 1.2654, -0.1791, 0.6605, 1.1789, -0.1791, 0.3502, 0.9754, 0.1791, 0.3502, 0.9754, -0.1791, 0.6605, 1.1789, -0.1791, 0.6605, 1.1789, 0.1791, 0.3502, 0.9754, 0.1791, 0.9194, 1.3626, 0.1791, 0.5781, 1.3375, -0.1791, 0.5781, 1.3375, 0.1791, 0.9194, 1.3626, 0.1791, 0.9194, 1.3626, -0.1791, 0.5781, 1.3375, -0.1791, 0.5781, 1.3375, 0.1791, 0.3023, 1.2257, -0.1791, 0.3023, 1.2257, 0.1791, 0.5781, 1.3375, 0.1791, 0.5781, 1.3375, -0.1791, 0.3023, 1.2257, -0.1791, 0.8845, 1.229, 0.1791, 1.0654, 1.1722, -0.1791, 1.0654, 1.1722, 0.1791, 0.8845, 1.229, 0.1791, 0.8845, 1.229, -0.1791, 1.0654, 1.1722, -0.1791, 0.9194, 1.3626, -0.1791, 1.2047, 1.2654, 0.1791, 1.2047, 1.2654, -0.1791, 0.9194, 1.3626, -0.1791, 0.9194, 1.3626, 0.1791, 1.2047, 1.2654, 0.1791, 1.3195, 1.0937, -0.1791, 1.3234, 0.8498, 0.1791, 1.3234, 0.8498, -0.1791, 1.3195, 1.0937, -0.1791, 1.3195, 1.0937, 0.1791, 1.3234, 0.8498, 0.1791, 1.2047, 1.2654, -0.1791, 1.3195, 1.0937, 0.1791, 1.3195, 1.0937, -0.1791, 1.2047, 1.2654, -0.1791, 1.2047, 1.2654, 0.1791, 1.3195, 1.0937, 0.1791, 0.6605, 1.1789, 0.1791, -0.0079, 0.9754, 0.1791, 0.3502, 0.9754, 0.1791, 0.6605, 1.1789, 0.1791, 0.3023, 1.2257, 0.1791, -0.0079, 0.9754, 0.1791, 1.3195, 1.0937, 0.1791, 1.0654, 1.1722, 0.1791, 1.2385, 1.0125, 0.1791, 1.2047, 1.2654, 0.1791, 1.0654, 1.1722, 0.1791, 1.3195, 1.0937, 0.1791, 1.2047, 1.2654, 0.1791, 0.8845, 1.229, 0.1791, 1.0654, 1.1722, 0.1791, 0.8845, 1.229, 0.1791, 0.3023, 1.2257, 0.1791, 0.6605, 1.1789, 0.1791, 0.8845, 1.229, 0.1791, 0.5781, 1.3375, 0.1791, 0.3023, 1.2257, 0.1791, 1.2047, 1.2654, 0.1791, 0.5781, 1.3375, 0.1791, 0.8845, 1.229, 0.1791, 0.9194, 1.3626, 0.1791, 0.5781, 1.3375, 0.1791, 1.2047, 1.2654, 0.1791, 1.0654, 1.1722, 0.1791, 1.2385, 1.0125, -0.1791, 1.2385, 1.0125, 0.1791, 1.0654, 1.1722, 0.1791, 1.0654, 1.1722, -0.1791, 1.2385, 1.0125, -0.1791, 0.8845, 1.229, -0.1791, 0.6605, 1.1789, 0.1791, 0.6605, 1.1789, -0.1791, 0.8845, 1.229, -0.1791, 0.8845, 1.229, 0.1791, 0.6605, 1.1789, 0.1791, 0.7358, -0.5162, 0.1791, 0.3128, -0.4544, 0.1791, 0.4922, -0.5963, 0.1791, 0.5175, -0.2717, 0.1791, 0.3128, -0.4544, 0.1791, 0.7358, -0.5162, 0.1791, 0.0525, -0.1791, -0.1791, 0.5175, -0.2717, -0.1791, 0.3128, -0.4544, -0.1791, 0.0525, -0.1791, -0.1791, 0.4107, -0.1791, -0.1791, 0.5175, -0.2717, -0.1791, 0.4107, -0.1791, -0.1791, 0.5175, -0.2717, 0.1791, 0.5175, -0.2717, -0.1791, 0.4107, -0.1791, -0.1791, 0.4107, -0.1791, 0.1791, 0.5175, -0.2717, 0.1791, 0.0525, -0.1791, 0.1791, 0.3128, -0.4544, -0.1791, 0.3128, -0.4544, 0.1791, 0.0525, -0.1791, 0.1791, 0.0525, -0.1791, -0.1791, 0.3128, -0.4544, -0.1791, 0.4922, -0.5963, 0.1791, 0.5998, -0.7714, -0.1791, 0.5998, -0.7714, 0.1791, 0.4922, -0.5963, 0.1791, 0.4922, -0.5963, -0.1791, 0.5998, -0.7714, -0.1791, 0.3128, -0.4544, -0.1791, 0.7358, -0.5162, -0.1791, 0.4922, -0.5963, -0.1791, 0.3128, -0.4544, -0.1791, 0.5175, -0.2717, -0.1791, 0.7358, -0.5162, -0.1791, 0.5175, -0.2717, -0.1791, 0.7358, -0.5162, 0.1791, 0.7358, -0.5162, -0.1791, 0.5175, -0.2717, -0.1791, 0.5175, -0.2717, 0.1791, 0.7358, -0.5162, 0.1791, 0.3128, -0.4544, 0.1791, 0.4922, -0.5963, -0.1791, 0.4922, -0.5963, 0.1791, 0.3128, -0.4544, 0.1791, 0.3128, -0.4544, -0.1791, 0.4922, -0.5963, -0.1791, 0.6375, -0.8732, -0.1791, 0.8386, -0.6913, -0.1791, 0.8781, -0.8795, -0.1791, 0.5998, -0.7714, -0.1791, 0.8386, -0.6913, -0.1791, 0.6375, -0.8732, -0.1791, 0.8386, -0.6913, 0.1791, 0.4922, -0.5963, 0.1791, 0.5998, -0.7714, 0.1791, 0.7358, -0.5162, 0.1791, 0.4922, -0.5963, 0.1791, 0.8386, -0.6913, 0.1791, 0.4922, -0.5963, -0.1791, 0.8386, -0.6913, -0.1791, 0.5998, -0.7714, -0.1791, 0.4922, -0.5963, -0.1791, 0.7358, -0.5162, -0.1791, 0.8386, -0.6913, -0.1791, 0.7358, -0.5162, -0.1791, 0.8386, -0.6913, 0.1791, 0.8386, -0.6913, -0.1791, 0.7358, -0.5162, -0.1791, 0.7358, -0.5162, 0.1791, 0.8386, -0.6913, 0.1791, 0.6375, -0.8732, 0.1791, 0.6684, -1.0378, -0.1791, 0.6684, -1.0378, 0.1791, 0.6375, -0.8732, 0.1791, 0.6375, -0.8732, -0.1791, 0.6684, -1.0378, -0.1791, 0.8386, -0.6913, -0.1791, 0.8781, -0.8795, 0.1791, 0.8781, -0.8795, -0.1791, 0.8386, -0.6913, -0.1791, 0.8386, -0.6913, 0.1791, 0.8781, -0.8795, 0.1791, 0.5998, -0.7714, 0.1791, 0.6375, -0.8732, -0.1791, 0.6375, -0.8732, 0.1791, 0.5998, -0.7714, 0.1791, 0.5998, -0.7714, -0.1791, 0.6375, -0.8732, -0.1791, 0.8386, -0.6913, 0.1791, 0.6375, -0.8732, 0.1791, 0.8781, -0.8795, 0.1791, 0.8386, -0.6913, 0.1791, 0.5998, -0.7714, 0.1791, 0.6375, -0.8732, 0.1791, 0.873, -1.044, 0.1791, 0.6535, -1.105, 0.2052, 0.8879, -1.1121, 0.2052, 0.873, -1.044, 0.1791, 0.6684, -1.0378, 0.1791, 0.6535, -1.105, 0.2052, 0.8781, -0.8795, 0.1791, 0.6684, -1.0378, 0.1791, 0.873, -1.044, 0.1791, 0.8781, -0.8795, 0.1791, 0.6375, -0.8732, 0.1791, 0.6684, -1.0378, 0.1791, 0.6684, -1.0378, -0.1791, 0.8781, -0.8795, -0.1791, 0.873, -1.044, -0.1791, 0.6375, -0.8732, -0.1791, 0.8781, -0.8795, -0.1791, 0.6684, -1.0378, -0.1791, 0.8781, -0.8795, -0.1791, 0.873, -1.044, 0.1791, 0.873, -1.044, -0.1791, 0.8781, -0.8795, -0.1791, 0.8781, -0.8795, 0.1791, 0.873, -1.044, 0.1791, 1.3195, 1.0937, -0.1791, 1.3234, 0.8498, -0.1791, 1.2385, 1.0125, -0.1791, 1.2385, 1.0125, 0.1791, 1.3234, 0.8498, -0.1791, 1.3234, 0.8498, 0.1791, 1.2385, 1.0125, 0.1791, 1.2385, 1.0125, -0.1791, 1.3234, 0.8498, -0.1791, 1.2385, 1.0125, 0.1791, 1.3234, 0.8498, 0.1791, 1.3195, 1.0937, 0.1791, 0.6535, -1.7599, -0.2052, 0.8879, -1.1121, -0.2052, 0.8879, -1.767, -0.2052, 0.6535, -1.105, -0.2052, 0.8879, -1.1121, -0.2052, 0.6535, -1.7599, -0.2052, 0.6535, -1.105, -0.2052, 0.873, -1.044, -0.1791, 0.8879, -1.1121, -0.2052, 0.6684, -1.0378, -0.1791, 0.873, -1.044, -0.1791, 0.6535, -1.105, -0.2052, 0.873, -1.044, -0.1791, 0.8879, -1.1121, 0.2052, 0.8879, -1.1121, -0.2052, 0.873, -1.044, -0.1791, 0.873, -1.044, 0.1791, 0.8879, -1.1121, 0.2052, 0.6684, -1.0378, 0.1791, 0.6535, -1.105, -0.2052, 0.6535, -1.105, 0.2052, 0.6684, -1.0378, 0.1791, 0.6684, -1.0378, -0.1791, 0.6535, -1.105, -0.2052, 0.8879, -1.767, -0.2052, 0.8749, -1.814, 0.1824, 0.8749, -1.814, -0.1824, 0.8879, -1.767, -0.2052, 0.8879, -1.767, 0.2052, 0.8749, -1.814, 0.1824, 0.8879, -1.1121, -0.2052, 0.8879, -1.767, 0.2052, 0.8879, -1.767, -0.2052, 0.8879, -1.1121, -0.2052, 0.8879, -1.1121, 0.2052, 0.8879, -1.767, 0.2052, 0.6535, -1.105, 0.2052, 0.6535, -1.7599, -0.2052, 0.6535, -1.7599, 0.2052, 0.6535, -1.105, 0.2052, 0.6535, -1.105, -0.2052, 0.6535, -1.7599, -0.2052, 0.8879, -1.1121, 0.2052, 0.6535, -1.7599, 0.2052, 0.8879, -1.767, 0.2052, 0.8879, -1.1121, 0.2052, 0.6535, -1.105, 0.2052, 0.6535, -1.7599, 0.2052, 0.6665, -1.8076, 0.1824, 0.8749, -1.814, -0.1824, 0.8749, -1.814, 0.1824, 0.6665, -1.8076, 0.1824, 0.6665, -1.8076, -0.1824, 0.8749, -1.814, -0.1824, 0.6535, -1.7599, 0.2052, 0.6665, -1.8076, -0.1824, 0.6665, -1.8076, 0.1824, 0.6535, -1.7599, 0.2052, 0.6535, -1.7599, -0.2052, 0.6665, -1.8076, -0.1824, 0.8879, -1.767, 0.2052, 0.6665, -1.8076, 0.1824, 0.8749, -1.814, 0.1824, 0.8879, -1.767, 0.2052, 0.6535, -1.7599, 0.2052, 0.6665, -1.8076, 0.1824, 0.6665, -1.8076, -0.1824, 0.8879, -1.767, -0.2052, 0.8749, -1.814, -0.1824, 0.6535, -1.7599, -0.2052, 0.8879, -1.767, -0.2052, 0.6665, -1.8076, -0.1824 )

[node name="Hook" type="Spatial"]
script = ExtResource( 2 )

[node name="HookMesh" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 0, 0, 0, 0.2, 0.35, 0.146, 0 )
layers = 8
mesh = ExtResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="HookMesh"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="HookMesh/StaticBody"]
shape = SubResource( 1 )

[node name="TimerStart" type="Timer" parent="."]

[node name="Chains" type="Sprite3D" parent="."]
transform = Transform( 0.05, 0, 0, 0, -2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, -0.105604, -0.0054082, -0.0356269 )
layers = 8
centered = false
shaded = true
alpha_cut = 2
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 200, 150 )
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
